<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.task.movie.viewmodel.MovieListViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieListActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_Titlebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08"
            app:layout_constraintTop_toBottomOf="@+id/searchView_movies" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_right_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_bottom_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_left_border_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0075" />

        <SearchView
            android:id="@+id/searchView_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:queryHint="@string/search_MovieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showIf="@{viewModel.state.showLoading}"
            />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@{viewModel.state.errorText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView_movies"
            app:showIf="@{viewModel.state.errorText != null}"
            tools:text="Errortext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@color/black_alpha_60"
            app:entries="@{viewModel.state.movieList}"
            app:showIf="@{viewModel.state.movieList.size > 0}"
            app:layout_constraintBottom_toTopOf="@+id/gL_bottom_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>