...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />


        <TextView
            android:id="@+id/txtView_Tittle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{movie.title}"
...
